--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
      - MONGO_INITDB_ROOT_USERNAME=admin
      - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
-     - mongo-data:/data/db
+     - mongo-data:/data/db  #Default Mongo data location.
   mongo-express:
     image: mongo-express
     restart: always
@@ -26,5 +26,5 @@ services:
     depends_on:
      - "mongodb"
 volumes:
-  mongo-data:
+  mongo-data:  #Named volume
     driver: local
